# amirkarimi.github.io

./: .gitignore  CNAME  README.md  _config.yml  about.md  config.py  contact.html  cv.html  data.yaml  index.html  main.py  markdown_parser.py  models.py  package-lock.json  package.json  processors.py  pyproject.toml  requirements.txt  server.py  style.css  useful-snippets.html  useful_snippets.md  utils.py  watch.py
_drafts/: 2015-10-24-type-injection.markdown  2016-02-05-back-to-ubuntu-from-arch.markdown  ssh-is-a-window-to-a-world.md
_includes/: disqus.html  google_analytics.html  head.html  header.html
_layouts/: default.html  post.html
_posts/: 2015-08-15-hello-worl-with-the-help-of-the-community.markdown  2015-08-15-hello-worl-with-the-help-of-the-community.md  2015-08-17-why-functional-programming.markdown  2015-08-17-why-functional-programming.md  2015-08-19-installing-rvm-on-ubuntu-desktop.markdown  2015-08-19-installing-rvm-on-ubuntu-desktop.md  2015-08-27-how-i-deploy-my-play-apps.markdown  2015-08-27-how-i-deploy-my-play-apps.md  2015-09-03-akka-single-jvm-cluster-sharding.markdown  2015-09-03-akka-single-jvm-cluster-sharding.md  2015-10-11-non-verbose-seo-friendly-localization-play-framework.markdown  2015-10-11-non-verbose-seo-friendly-localization-play-framework.md  2015-11-29-how-to-run-android-sdk-on-64bit-arch.markdown  2015-11-29-how-to-run-android-sdk-on-64bit-arch.md  2015-12-07-the-hacker-scripts-scala.markdown  2016-02-26-sbt-on-a-linux-encrypted-home.markdown  2016-02-26-sbt-on-a-linux-encrypted-home.md  2016-03-11-type-injection-in-scala.md  (+20 more)
(+168 files in other folders)
