[[tool.mypy.overrides]]
module = "watchdog.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "sass.*"
ignore_missing_imports = true

[tool.poetry]
name = "amirkarimi-github-io"
version = "0.1.0"
description = "My DIY Static Website Builder"
authors = ["Amir Karimi <a.karimi.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "8.1.3"
commonmark = "0.9.1"
jinja2 = "3.1.2"
libsass = "0.21.0"
markdown = "3.4.1"
markupsafe = "2.1.1"
mypy = "0.982"
mypy-extensions = "0.4.3"
pygments = "2.13.0"
pymdown-extensions = "10.0"
pyyaml = "6.0"
rich = "12.6.0"
six = "1.16.0"
tomli = "2.0.1"
typer = "0.7.0"
types-attrs = "19.1.0"
types-markdown = "3.4.2.1"
types-pyyaml = "6.0.12.1"
typing-extensions = "4.4.0"
watchdog = "2.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
